fix spacing issues between header and content

--- a/src/sass/components/EditsTable.scss
+++ b/src/sass/components/EditsTable.scss
@@ -1,6 +1,10 @@
 .EditsContainerEntry {
   margin: 2em 0 3em;
 
+  &:first-of-type {
+    margin-top: 0;
+  }
+
   &:last-of-type {
     margin-top: 6em;
   }
