--- a/src/sass/components/IRSReport.scss
+++ b/src/sass/components/IRSReport.scss
@@ -1,6 +1,6 @@
 .IRSReport {
   h2 {
-    margin-top: 2em;
+    margin-top: 0;
   }
   .usa-font-lead {
     margin-top: .5em;
