--- a/src/sass/hmda.scss
+++ b/src/sass/hmda.scss
@@ -1,6 +1,11 @@
 #main-content {
   position:relative;
+  margin-top: 4em;
   margin-bottom: 2em;
+
+  &.Home {
+    margin-top: 0;
+  }
 }
 
 a {
